<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Consumer App</string>
    <string name="user_1">User 1</string>
    <string name="dash">-</string>
    <string name="user1">\@user1</string>
    <string name="repository">Repository</string>
    <string name="salomo_hutapea">Salomo Hutapea</string>
    <string name="salomohutapea">\@salomohutapea</string>
    <string name="google">Google</string>
    <string name="_100">100</string>
    <string name="followers">followers</string>
    <string name="dot">·</string>
    <string name="_200">200</string>
    <string name="user_follow_icon">User follow icon</string>
    <string name="repository_count_icon">Repository count icon</string>
    <string name="following">following</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="search_hint">username</string>
    <string name="show_more">Show more</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="show_favorite_users">Show favorite users</string>
    <string name="user_s_avatar">User\'s avatar</string>
    <string name="delete_button">Delete button</string>
    <string name="detail_user">User Detail</string>
    <string name="favorite_user">Favorite User</string>
    <string name="cannot_fetch">Cannot fetch data</string>
    <string name="no_connection">No connection</string>
    <string name="added_fav">Added to favorite</string>
    <string name="deleted_fav">Deleted from favorite</string>
    <string name="no_favorite">There is no favorite user</string>
    <string name="consumer_app">Consumer App</string>
</resources>


