<?xml version="1.0" encoding="utf-8"?>

<com.daimajia.swipe.SwipeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="100dp"
    android:id="@+id/swipelayout"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="80dp"
        android:weightSum="1"
        android:id="@+id/swipe_delete"
        android:layout_height="match_parent"
        android:background="#ED2939"
        android:gravity="center">
        <ImageView
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fav_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/fav_image"
            app:layout_constraintTop_toTopOf="@id/fav_image"
            android:id="@+id/fav_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_1"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textColor="@color/design_default_color_primary"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/fav_card_repo"
            app:layout_constraintLeft_toRightOf="@id/fav_image"
            app:layout_constraintTop_toBottomOf="@id/fav_username"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            app:cardBackgroundColor="#55CCCCCC"
            app:cardElevation="0dp"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:paddingHorizontal="8dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView android:layout_width="10dp"
                           android:layout_height="match_parent"
                           android:layout_gravity="center"
                           android:layout_marginEnd="6dp"
                           android:src="@drawable/git_icon"
                           android:contentDescription="@string/repository_count_icon"/>
                <TextView
                    android:id="@+id/fav_repo_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/repository"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_icon_follow"
            app:layout_constraintLeft_toRightOf="@id/fav_card_repo"
            app:layout_constraintBottom_toBottomOf="@id/fav_card_repo"
            app:layout_constraintTop_toTopOf="@id/fav_card_repo"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#55CCCCCC"
            android:layout_marginEnd="5dp">
            <ImageView
                android:padding="2dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_follow_icon"
                android:contentDescription="@string/user_follow_icon"/>
        </androidx.cardview.widget.CardView>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/card_icon_follow"
            app:layout_constraintTop_toTopOf="@id/fav_card_repo"
            app:layout_constraintBottom_toBottomOf="@id/fav_card_repo"
            android:id="@+id/fav_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/_100"
            android:textSize="12sp"
            android:layout_marginEnd="2dp"/>
        <TextView
            android:id="@+id/label_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/followers"
            app:layout_constraintTop_toTopOf="@id/fav_card_repo"
            app:layout_constraintBottom_toBottomOf="@id/fav_card_repo"
            app:layout_constraintLeft_toRightOf="@id/fav_followers"
            android:layout_marginStart="2dp"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/dot"
            app:layout_constraintTop_toTopOf="@id/fav_card_repo"
            app:layout_constraintBottom_toBottomOf="@id/fav_card_repo"
            app:layout_constraintLeft_toRightOf="@id/label_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/dot"
            android:layout_marginStart="2dp"
            android:textSize="12sp"/>
        <TextView
            android:layout_marginStart="2dp"
            app:layout_constraintLeft_toRightOf="@id/dot"
            app:layout_constraintTop_toTopOf="@id/fav_card_repo"
            app:layout_constraintBottom_toBottomOf="@id/fav_card_repo"
            android:id="@+id/fav_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/_200"
            android:textSize="12sp"
            android:layout_marginEnd="2dp"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@id/fav_following"
            app:layout_constraintTop_toTopOf="@id/fav_card_repo"
            app:layout_constraintBottom_toBottomOf="@id/fav_card_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginStart="2dp"
            android:text="@string/following"
            android:textSize="12sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.daimajia.swipe.SwipeLayout>